Code/syntax.output
Terminals unused in grammar

   SPACE
   LINE
   AERROR


State 23 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: %empty
   14       | ID

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: %empty
   25         | Stmt StmtList

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | error SEMI
   33     | error RC

   34 DefList: %empty
   35        | Def DefList

   36 Def: Specifier DecList SEMI
   37    | error SEMI
   38    | error RC

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 32 33 37 38
INT (258) 17 59
FLOAT (259) 60
ID (260) 14 15 16 18 19 54 55 57 58
SEMI (261) 4 5 26 28 32 36 37
COMMA (262) 8 20 40 61
ASSIGNOP (263) 42 43
RELOP (264) 46
PLUS (265) 47
MINUS (266) 48 52
STAR (267) 49
DIV (268) 50
AND (269) 44
OR (270) 45
DOT (271) 57
NOT (272) 53
TYPE (273) 9
LP (274) 18 19 29 30 31 51 54 55
RP (275) 18 19 29 30 31 51 54 55
LB (276) 17 56
RB (277) 17 56
LC (278) 11 23
RC (279) 11 23 33 38
STRUCT (280) 11 12
RETURN (281) 28
IF (282) 29 30
ELSE (283) 30
WHILE (284) 31
SPACE (285)
LINE (286)
AERROR (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 3
ExtDef (36)
    on left: 4 5 6, on right: 3
ExtDecList (37)
    on left: 7 8, on right: 4 8
Specifier (38)
    on left: 9 10, on right: 4 5 6 22 36
StructSpecifier (39)
    on left: 11 12, on right: 10
OptTag (40)
    on left: 13 14, on right: 11
Tag (41)
    on left: 15, on right: 12
VarDec (42)
    on left: 16 17, on right: 7 8 17 22 41 42
FunDec (43)
    on left: 18 19, on right: 6
VarList (44)
    on left: 20 21, on right: 18 20
ParamDec (45)
    on left: 22, on right: 20 21
CompSt (46)
    on left: 23, on right: 6 27
StmtList (47)
    on left: 24 25, on right: 23 25
Stmt (48)
    on left: 26 27 28 29 30 31 32 33, on right: 25 29 30 31
DefList (49)
    on left: 34 35, on right: 11 23 35
Def (50)
    on left: 36 37 38, on right: 35
DecList (51)
    on left: 39 40, on right: 36 40
Dec (52)
    on left: 41 42, on right: 39 40
Exp (53)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60,
    on right: 26 28 29 30 31 42 43 44 45 46 47 48 49 50 51 52 53 56
    57 61 62
Args (54)
    on left: 61 62, on right: 54 61


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 13 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   14 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

   23 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 34 (DefList)]
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   37 Def: error . SEMI
   38    | error . RC

    SEMI  shift, and go to state 37
    RC    shift, and go to state 38


State 26

   36 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


State 28

   35 DefList: Def . DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 34 (DefList)]
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 28


State 29

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 30

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 44


State 31

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 45


State 32

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 46

    $default  reduce using rule 21 (VarList)


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


State 36

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 23
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57

    RC  reduce using rule 24 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 59
    Stmt      go to state 60
    Exp       go to state 61


State 37

   37 Def: error SEMI .

    $default  reduce using rule 37 (Def)


State 38

   38 Def: error RC .

    $default  reduce using rule 38 (Def)


State 39

   17 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 62
    LB        shift, and go to state 22

    $default  reduce using rule 41 (Dec)


State 40

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 63


State 41

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 64

    $default  reduce using rule 39 (DecList)


State 42

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 43

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 44

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 45

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 46

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 65
    ParamDec         go to state 32


State 47

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 48

   32 Stmt: error . SEMI
   33     | error . RC

    SEMI  shift, and go to state 66
    RC    shift, and go to state 67


State 49

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


State 50

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


State 51

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 68

    $default  reduce using rule 58 (Exp)


State 52

   52 Exp: MINUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 69


State 53

   53 Exp: NOT . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 70


State 54

   51 Exp: LP . Exp RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 71


State 55

   28 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 72


State 56

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 57

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 74


State 58

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 59

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 75


State 60

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 23
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57

    RC  reduce using rule 24 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 76
    Stmt      go to state 60
    Exp       go to state 61


State 61

   26 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 62

   42 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 88


State 63

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 64

   40 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 39
    DecList  go to state 89
    Dec      go to state 41


State 65

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 66

   32 Stmt: error SEMI .

    $default  reduce using rule 32 (Stmt)


State 67

   33 Stmt: error RC .

    $default  reduce using rule 33 (Stmt)


State 68

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    RP     shift, and go to state 90

    Exp   go to state 91
    Args  go to state 92


State 69

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    STAR  shift, and go to state 82
    DIV   shift, and go to state 83
    DOT   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 52 (Exp)


State 70

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT  shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 53 (Exp)


State 71

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    RP        shift, and go to state 93
    LB        shift, and go to state 87


State 72

   28 Stmt: RETURN Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 73

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 95


State 74

   31 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 96


State 75

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 76

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 77

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 78

   43 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 97


State 79

   46 Exp: Exp RELOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 98


State 80

   47 Exp: Exp PLUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 99


State 81

   48 Exp: Exp MINUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 100


State 82

   49 Exp: Exp STAR . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 101


State 83

   50 Exp: Exp DIV . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 102


State 84

   44 Exp: Exp AND . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 103


State 85

   45 Exp: Exp OR . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 104


State 86

   57 Exp: Exp DOT . ID

    ID  shift, and go to state 105


State 87

   56 Exp: Exp LB . Exp RB

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 106


State 88
